--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -73,16 +73,15 @@
 
 .grid {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 100%;
   margin-top: 3rem;
 }
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
+  flex-basis: 30%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -114,7 +113,7 @@
   height: 1em;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 100%) {
   .grid {
     width: 100%;
     flex-direction: column;
